--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         <label class="jogador, text">
             Jogador: 
         </label>
-        <label id="jogador-selecionado">
+        <label  id="jogador-selecionado" >
             
         </label>
     </div>
@@ -36,7 +36,7 @@
         <label class="vencedor, text">
             Vencedor: 
         </label>
-        <label id="vencedor-selecionado, text">
+        <label id="vencedor-selecionado">
             
         </label>
     </div>
